--- a/static/theme.css
+++ b/static/theme.css
@@ -12,6 +12,11 @@ body.dark-theme {
     color: #ffffff;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 
 .fb-comments-container {
     max-width: 550px; /* Maximum size of the Facebook comments plugin */
@@ -20,6 +25,10 @@ body.dark-theme {
 
 @media (max-width: 550px) {
     .fb-comments-container {
+        width: 100%;
+    }
+    
+    img {
         width: 100%;
     }
 }
